# sxLaep

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  test.sh
.github/workflows/: publish-github-pages.yml  regenerate-pydoc.yml
data/: enzyme_example.fasta  new.fasta  noenzyme_example.fasta  price.fasta
docs/: API_REFERENCE.md  WORKFLOW.md  index.html
docs/pydoc/: sxlaep.cli.html  sxlaep.config.html  sxlaep.fasta.html  sxlaep.features.html  sxlaep.model.html  sxlaep.pipeline.html  sxlaep.training.html
examples/: enzyme_example.fasta  noenzyme_example.fasta
notebooks/: Marine_Enzyme_Analysis_Pipeline_EN.ipynb  RAEP_package.ipynb  README.md
scripts/: convert_pkl_to_native_ubj.py  generate_pydoc.py  main.py  predict_fasta.py  sync_to_github.sh  train_raep.py  train_sxLaep.ipynb  train_sxlaep.py
sxlaep/: __init__.py  cli.py  config.py  features.py  model.py  pipeline.py  training.py
sxlaep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sxraep/: __init__.py  cli.py  config.py  fasta.py  features.py  model.py  pipeline.py  training.py
tests/: install.sh  support_paths.py  test_cli_shorthand.py  test_demo_example.py  test_imports.py  test_model_load.py
tests/fixtures/: README.md
vignettes/: README.md
