[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sxraep"
version = "0.1.0"
description = "Sequence feature-based enzyme/non-enzyme classification workflow."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "labxscut"}]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "xgboost>=1.7",
    "joblib>=1.2",
]

[project.scripts]
sxraep = "sxraep.cli:main"

[tool.setuptools.packages.find]
include = ["sxraep*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
