[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sxlaep"
version = "1.0.0"
description = "sxLaep: Rapid Enzyme/Non-Enzyme Prediction using sequence features and XGBoost"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "labxscut"}]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "xgboost>=1.7",
    "joblib>=1.2",
]

[project.scripts]
sxlaep = "sxlaep.cli:main"

[tool.setuptools.packages.find]
include = ["sxlaep*"]

[tool.setuptools.package-data]
sxlaep = ["*.ubj", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
